# ultrathink-system

./: .env  .env.example  .gitignore  .mailmap  .paths  .paths.example  .pre-commit-config.yaml  AGENT_RESUME.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PR_BODY.md  README.md  SKILL.md  api_server.py  check-stack.sh  index.html  install-multi-agent.sh  install-single-agent.sh  install.sh  ip_detection_solution.py  network_autoconfig.py  openclaw_bootstrap.py  package-lock.json  package.json  portal_server.py  pyproject.toml  requirements.txt  setup_macos.py  start.sh  tailwind.config.ts  test-package-install.py  tsconfig.json  verify-package.sh  vite.config.ts
.claude/: ecc-tools.json  identity.json  settings.json  settings.local.json
.claude/agents/: crystallizer.md  ultrathink-architect-agent.md  ultrathink-context-agent.md  ultrathink-crystallizer-agent 2.md  ultrathink-crystallizer-agent.md  ultrathink-executor-agent 2.md  ultrathink-executor-agent.md  ultrathink-orchestrator 2.md  ultrathink-orchestrator.md  ultrathink-refiner-agent 2.md  ultrathink-refiner-agent.md  ultrathink-verifier-agent.md
.claude/commands/: add-new-skill-package.md  ecc-sync.md  feature-development.md  instinct-import.md  sync-skill-package-to-multi-location.md
.claude/lessons/: LESSONS.md  Perplexity-Ultrathink-Consolidation.md
.codex/: AGENTS.md  config.toml
.codex/agents/: docs-researcher.toml  explorer.toml  reviewer.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  test.yml
config/: com.orama.network-watch.plist  hardware_policy_cache.yml  mac-orchestrator.json
docs/: 2026-04-26-session-state-plan.md  2026-04-28-perpetua-orama-master-revamp.md  2026-05-08-v1-supervisor-brainstorm.md  2026-05-14--UNIFIED-ABSORPTION-PLAN.md  HUMAN-IN-LOOP-ACCOUNTABILITY.md  LESSONS.md  NEXT_STEPS.md  OPENROUTER_FREE_MODELS.md  PERPLEXITY_BRIDGE.md  ROADMAP_v1.1.md  ROADMAP_v1.2.md  SYNC_ANALYSIS.md  TDD.md  api-reference.md  cross-platform.md  faq.md  installation.md  openclaw-setup.md  quick-start.md  troubleshooting.md
docs/archive/: AGENT_RESUME_v1_legacy.md
docs/dashboard/: routing-dashboard.html
docs/recovery/: 2026-04-24-001-orama-history-recovery.md  2026-04-24-002-commit-salvage-matrix.md  2026-04-24-003-git-safety-guardrails.md  2026-05-04-gemini-3-flash-recovery-analysis.md
docs/tripartite-plan/: 2026-04-26-codex-001-PLAN.md  2026-04-26-gemini-002-PLAN.md  2026-04-26-hardware-model-routing-004-PART2-PLAN.md
docs/v2/: 00-context-and-decisions.md  01-kernel-spec.md  03-safety-v2.5.md  04-build-order.md  05-feasibility-review.md  06-open-questions.md  07-agate-vision.md  08-technical-architecture-review.md  09-comparative-analysis-and-merging-plan.md  10-v1-hacks-automation-orbit.md  11-idempotency-and-guard-patterns.md  12-xai-model-migration-2026-05.md  13-local-model-catalog-strategy.md  14-supervisor-and-anthropic-patterns.md  15-phase1-as-built.md  16-web-app-orchestration-plan.md  README.md
docs/wiki/: 01-ci-deps.md  02-idempotent-installs.md  03-device-identity.md  04-gateway-discovery.md  05-bulk-sed-safety.md  06-multi-agent-collab.md  07-startup-ip-detection.md  08-git-hygiene-and-branching.md  09-policy-fail-closed-and-checklist.md  11-codex-github-mcp-config.md  (+2 more)
multi_agent/: README.md
scripts/: apply-openrouter-free-defaults.sh  check_ci_deps.py  discover.py  ensure_requirements.ps1  ensure_requirements.sh  gen_local_models_json.py  hardware_policy_cli.py  install_network_watch.sh  refresh_policy_cache.py  setup_codex.sh  simulate_ci.sh  spawn_agents.py  sync-companion-instincts.sh  validate_registry.py  verify-openrouter-models.sh
single-agent/: SKILL.md
single_agent/: README.md  SKILL.md
skill-package/: INSTALL.md  install.sh
src/: App.tsx  main.tsx
tests/: README.md  test_api_server.py  test_bridge.py  test_bridge_docs.py  test_local_first_routing.py  test_multi_agent.py  test_openclaw_bootstrap.py  test_orchestrator.py  test_portal_app_state.py  test_portal_artifacts.py  test_portal_jobs_proxy.py  test_repo_hygiene.py  test_single_agent.py  test_swarm_launch.py  test_swarm_preview.py  test_v2_shape.py  test_version_docs.py
utils/: ip_resolver.py
windows/: README.md  install.ps1  requirements-windows.txt  start.ps1
(+156 files in other folders)
