[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "ultrathink-system"
version = "0.9.9.2"
description = "ultrathink Multi-Agent System"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.1",
    "slowapi>=0.1.9,<0.2",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "tomli>=2.0.1; python_version < \"3.11\"",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning",
    "ignore::ResourceWarning",
]

[tool.uv]
managed = true

[tool.hatch.build.targets.sdist]
include = [
    "api_server.py",
    "multi_agent",
    "single_agent",
    "examples",
    "docs",
    "tests",
    "LICENSE",
    "README.md",
    "CONTRIBUTING.md",
    "CHANGELOG.md",
    "install.sh",
    "install-multi-agent.sh",
    "verify-package.sh",
    "test-package-install.py",
]

[tool.hatch.build.targets.wheel]
packages = ["multi_agent", "single_agent"]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "docs"
"examples" = "examples"
"tests" = "tests"
"api_server.py" = "api_server.py"
"LICENSE" = "LICENSE"
"README.md" = "README.md"
"CONTRIBUTING.md" = "CONTRIBUTING.md"
"CHANGELOG.md" = "CHANGELOG.md"
"install.sh" = "install.sh"
"install-multi-agent.sh" = "install-multi-agent.sh"
"verify-package.sh" = "verify-package.sh"
"test-package-install.py" = "test-package-install.py"
